# imgaug2

./: .gitignore  CITATION.cff  LICENSE  MANIFEST.in  README.md  SECURITY.md  bandit.yml  codecov.yml  debug_contrast.py  mkdocs.yml  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  setup.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build_wheels.yml  security_bandit.yml  test_master.yml  test_pull_requests.yml  typecheck_ty.yml
benchmarks/: README.md  __init__.py  analyze.py  config.py  legacy.py  ops.py  run_all.py  runner.py  third_party_baseline.py
benchmarks/reports/: __init__.py  generate_report.py
checks/: check_add_to_hue_and_saturation.py  check_affine.py  check_affinecv2.py  check_average_blur.py  check_background_augmentation.py  check_bb_augmentation.py  check_bilateral_blur.py  check_blendalphasegmapclassids.py  check_blendalphasomecolors.py  check_brightness.py  check_canny.py  check_cartoon.py  check_channel_shuffle.py  check_clouds.py  check_color_temperature.py  check_contrast.py  check_crop_and_pad.py  check_cutout.py  check_deprecation_warning.py  check_directed_edge_detect.py  check_docs_assets.py  check_elastic_transformation.py  check_fast_snowy_landscape.py  check_fixed_size.py  check_flip_performance.py  check_fog.py  check_heatmaps.py  check_impulse_noise.py  check_imshow.py  check_jigsaw.py  check_jpeg_compression.py  check_kmeans_color_quantization.py  check_laplace_noise.py  check_mean_shift_blur.py  check_median_blur.py  check_mkdocs_nav.py  check_motion_blur.py  check_multicore_pool.py  check_multiply_hue_and_saturation.py  check_noise.py  (+30 more)
checks/reports/: issue-triage-Alfredo-Sandoval_imgaug2.md
docs/: benchmarks.md  blending.md  changelog.md  compat.md  compatibility.md  contributing.md  dtype_support.md  getting-started.md  hooks.md  index.md  installation.md  migration.md  performance.md  reproducibility.md  resources.md  security.md  stochastic_parameters.md
docs/api/: augmentables.md  augmenters.md  imgaug.md  index.md  parameters.md
docs/augmenters/: arithmetic.md  artistic.md  augmenter_index.md  base.md  blend.md  blur.md  collections.md  color.md  contrast.md  convolutional.md  debug.md  edges.md  flip.md  geometric.md  imgcorruptlike.md  index.md  meta.md  overlay.md  pillike.md  pooling.md  segmentation.md  size.md  weather.md
docs/backends/: mlx.md
docs/examples/: all_augmentables.md  basics.md  bounding_boxes.md  dataset_recipes.md  heatmaps.md  keypoints.md  line_strings.md  polygons.md  segmentation_maps.md
docs/scripts/: generate_gallery.py
docs/stylesheets/: extra.css
imgaug2/: __init__.py  _deprecations.py  data.py  dtypes.py  errors.py  imgaug.py  multicore.py  parameters.py  random.py  testutils.py  validation.py
imgaug2/augmentables/: __init__.py  base.py  batches.py  bbs.py  heatmaps.py  kps.py  lines.py  normalization.py  polys.py  segmaps.py  utils.py
imgaug2/augmenters/: __init__.py  _blend_utils.py  _size_utils.py  _typing.py  arithmetic.py  artistic.py  base.py  blend.py  blur.py  collections.py  color.py  contrast.py  convolutional.py  debug.py  edges.py  experimental.py  flip.py  geometric.py  imgcorruptlike.py  kelvin_to_rgb_table.json  meta.py  mix.py  overlay.py  pillike.py  pooling.py  segmentation.py  size.py  weather.py
imgaug2/augmenters/arithmetic/: __init__.py  _utils.py  add.py  dropout.py  invert.py  jpeg.py  multiply.py  replace.py
imgaug2/augmenters/blend/: __init__.py  base.py  gradients.py  grids.py  mask_generators.py  masks.py  noise_blend.py  segmap_bbs.py
imgaug2/augmenters/color/: __init__.py  _utils.py  brightness.py  colorspace.py  hue_saturation.py  luts.py  quantization.py  temperature.py
imgaug2/augmenters/contrast/: __init__.py  _intensity.py  _types.py  _utils.py  clahe.py  curves.py  histogram.py
imgaug2/augmenters/geometry/: __init__.py  _utils.py  affine.py  distortions.py  elastic.py  jigsaw.py  perspective.py  piecewise.py  polar.py
imgaug2/augmenters/imgcorruptlike/: __init__.py  _types.py  base.py  blur.py  core.py  digital.py  noise.py  registry.py  special.py  weather.py
imgaug2/augmenters/meta/: __init__.py  _augmenter_augmentables.py  _augmenter_batches.py  _augmenter_children.py  _augmenter_deterministic.py  _augmenter_highlevel.py  _context.py  base.py  cba_ops.py  channels.py  containers.py  identity.py  lambda_assert.py  utils.py
imgaug2/compat/: __init__.py  bbox.py  compose.py  keypoint.py  markers.py  transforms.py
imgaug2/cuda/: __init__.py  _core.py  blur.py  color.py  flip.py  geometry.py  noise.py  pointwise.py  pooling.py
imgaug2/mlx/: __init__.py  _core.py  _fast_metal.py  artistic.py  blend.py  blur.py  color.py  compression.py  convolutional.py  crop.py  edges.py  flip.py  geometry.py  morphology.py  noise.py  pillike.py  pipeline.py  pointwise.py  pooling.py  router.py  segmentation.py  sharpen.py
imgaug2/parameters/: __init__.py  base.py  continuous.py  discrete.py  handles.py  noise.py  prefetch.py  transforms.py  utils.py
imgaug2/torch/: __init__.py  dlpack.py
test/: requirements.txt  run_doctests.sh  run_tests.sh  test_api.py  test_compat.py  test_data.py  test_dtypes.py  test_imgaug.py  test_multicore.py  test_parameters.py  test_random.py
test/augmentables/: test_batches.py  test_bbs.py  test_heatmaps.py  test_kps.py  test_lines.py  test_normalization.py  test_polys.py  test_segmaps.py  test_utils.py
test/augmenters/: test_arithmetic.py  test_artistic.py  test_blend.py  test_blur.py  test_collections.py  test_color.py  test_contrast.py  test_convolutional.py  test_debug.py  test_edges.py  test_flip.py  test_geometric.py  test_imgcorruptlike.py  test_meta.py  test_mixed_files.py  test_overlay.py  test_pillike.py  test_pooling.py  test_segmentation.py  test_size.py  test_weather.py
test/backends/: test_cuda_geometry.py  test_cuda_ops.py  test_mlx_augmenters.py  test_mlx_color.py  test_mlx_geometry.py  test_mlx_ops.py  test_mlx_pipeline.py  test_mlx_router.py  test_torch_dlpack_adapter.py
(+30 files in other folders)
