[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imgaug2"
version = "0.0.1"
description = "Image augmentation library for deep neural networks"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Alfredo Sandoval"},
  {name = "Alexander Jung"},
  {name = "Joseph Sandoval"},
]
keywords = ["augmentation", "image", "deep learning", "neural network", "CNN", "machine learning", "computer vision", "overfitting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
urls = {Repository = "https://github.com/Alfredo-Sandoval/imgaug2"}
dependencies = [
  "numpy>=1.24,<3",
  "scipy",
  "Pillow",
  "matplotlib",
  "scikit-image>=0.14.2",
  "opencv-python-headless<4.12",
  "imageio",
  "Shapely",
  "opensimplex>=0.4",
]

[project.optional-dependencies]
mlx = ["mlx"]
numba = ["numba"]
dev = [
  "coverage",
  "imagecorruptions",
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings",
  "mkdocstrings-python",
  "pytest",
  "pytest-cov",
  "pytest-subtests",
  "ruff",
  "setuptools",
  "ty",
  "xdoctest>=0.7.2",
]

[project.scripts]
imgaug2-bench = "benchmarks.run_all:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["imgaug2*", "benchmarks*"]
exclude = ["checks*", "changelogs*", "test*"]

[tool.setuptools.package-data]
"*" = ["LICENSE", "README.md", "requirements.txt"]
"imgaug2" = [
    "py.typed",
    "DejaVuSans.ttf",
    "quokka.jpg",
    "quokka_annotations.json",
    "quokka_depth_map_halfres.png",
]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = [
  ".git",
  ".venv",
  "dist",
  "imgaug2.egg-info",
  "imgaug2/external",
]

[tool.ruff.lint]
# Start with basic rules and expand with modernization rules
select = [
    "E9", "F821", "F822", "F823", # Syntax + undefined
    "UP",  # pyupgrade
    "I",   # isort
    "B",   # bugbear
    "ANN", # annotations
    "PTH", # pathlib
    "FA",  # future-annotations
]
ignore = [
    # (empty) keep strict annotation rules
]

# Mirror the repo's historical pylint config where possible.
task-tags = ["FIXME", "XXX", "TODO"]
dummy-variable-rgx = "_+$|(_[a-zA-Z0-9_]*[a-zA-Z0-9]+?$)|dummy|^ignored_|^unused_"

[tool.ruff.lint.pylint]
max-args = 5
max-branches = 12
max-returns = 6
max-locals = 15
max-statements = 50
max-public-methods = 20
max-bool-expr = 5
max-nested-blocks = 5

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
# Tests - type separately
"test/**/*.py" = ["ANN"]
"checks/**/*.py" = ["ANN"]

[tool.ruff.format]
# Keep formatting stable while we migrate; defaults are fine, but we pin the basics explicitly.
line-ending = "auto"
indent-style = "space"
quote-style = "preserve"

[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
# Focus type checking on the library code; exclude demo scripts, vendored code,
# and build artifacts.
exclude = [
  "checks/**",
  "test/**",
  "docs/**",
  "build/**",
  "dist/**",
  "imgaug2/external/**",
  "imgaug2.egg-info/**",
  "imgaug2/testutils.py",
]

[tool.ty.rules]
# Start with a "gradual typing" posture. A lot of the imgaug API is highly
# dynamic and NumPy-heavy; some rules are currently too noisy until we add more
# precise annotations and/or stubs.
"invalid-argument-type" = "ignore"
"no-matching-overload" = "ignore"
"non-subscriptable" = "ignore"
"not-iterable" = "ignore"
"index-out-of-bounds" = "ignore"
"unsupported-operator" = "ignore"
"call-non-callable" = "ignore"
"unknown-argument" = "ignore"
"invalid-assignment" = "ignore"
"possibly-missing-attribute" = "ignore"

# Known third-party stub gaps / API drift that we don't want to gate on yet.
[[tool.ty.overrides]]
include = ["imgaug2/augmenters/pillike.py"]
rules."unresolved-attribute" = "ignore"

[[tool.ty.overrides]]
include = ["imgaug2/augmenters/segmentation.py"]
rules."unresolved-attribute" = "ignore"
rules."unresolved-import" = "ignore"

[[tool.ty.overrides]]
include = ["imgaug2/imgaug.py"]
rules."unresolved-import" = "ignore"

[tool.bandit]
skips = ["B101", "B403"]

[tool.pytest.ini_options]
addopts = "-p pytester -p no:doctest --xdoctest --xdoctest-global-exec=\"import imgaug2 as ia\\nfrom imgaug2 import augmenters as iaa\""
norecursedirs = ".git ignore build __pycache__ docs doc *.egg-info _*"
